# AssetRipper

./: .editorconfig  .gitignore  .gitmodules  AGENT_PLAN.md  AssetRipper-TABG.sln  AssetRipper.sln  AssetRipper.sln.DotSettings  AssetRipper.slnx  BUILD_FIXES.md  CONTRIBUTING.md  Directory.Build.props  Directory.Solution.targets  LICENSE  MSBuild.rsp  PLAN.txt  PROJECT_CHANGES.md  README.md  RESEARCH_NOTES.md  UtinyRipper.sln  deep_scanner.py  generate_all.sh  get_names.sh  index.html  manifest.json  native.yml  nuget.config  sg_preprocessed.xml  test.sh  toc.html  uTinyRipper.sln  version.txt
.github/: CONTRIBUTING.md  FUNDING.yml  dependabot.yml
AssemblyDumper/: .editorconfig  AssemblyDumper.csproj  Assertions.cs  CommonTypeGetter.cs  GenericTypeResolver.cs  GlobalUsings.cs  PrimitiveTypes.cs  ProcessorExtensions.cs  SharedState.cs  SystemTypeGetter.cs
AssemblyDumper.ConsoleApp/: AssemblyDumper.ConsoleApp.csproj  Program.cs
AssemblyValidator/: AssemblyValidator.csproj  GlobalUsings.cs  Loader.cs  Program.cs
AssetAnalyzer/: Analyzer.cs  AssetAnalyzer.csproj  BuildType.cs  BundleFile.cs  CommonString.cs  FileIdentifier.cs  LocalSerializedObjectIdentifier.cs  ObjectInfo.cs  Program.cs  README.md  SerializedFile.cs  SerializedFileFormatVersion.cs  SerializedFileHeader.cs  SerializedType.cs  StreamFile.cs  WebFile.cs
AssetRipper.Addressables/: AssetRipper.Addressables.csproj  BinaryJsonObject.cs  Catalog.cs  CatalogLocation.cs  ObjectType.cs
AssetRipper.Addressables.Tests/: AssetRipper.Addressables.Tests.csproj  UnitTest1.cs
AssetRipper.Assets/: AssetFactory.cs  AssetInfo.cs  AssetRipper.Assets.csproj  IUnityAssetBase.cs  IUnityObjectBase.cs  UnityAssetBase.cs  UnityObjectBase.cs  Usings.cs
AssetRipper.Assets.Tests/: AssetRipper.Assets.Tests.csproj  ResolutionTests.cs
AssetRipper.Core/: AssetRipper.Core.csproj  BuildInfo.cs  ClassIDTypeExtention.cs
AssetRipper.Export.Modules.Audio/: AssetRipper.Export.Modules.Audio.csproj
AssetRipper.Export.Modules.Shader/: AssetRipper.Export.Modules.Shaders.csproj
AssetRipper.Export.UnityProjects/: AssetRipper.Export.UnityProjects.csproj  IPostExporter.cs  PackageManifestPostExporter.cs  ProjectVersionPostExporter.cs  Ripper.cs  (+3 more)
HLSLccWrapper/: AssemblyInfo.cpp  CMakeLists.txt  HLSLccWrapper.cpp  HLSLccWrapper.filters  HLSLccWrapper.h  HLSLccWrapper.vcxproj  HLSLccWrapper.vcxproj.filters
HLSLccWrapper/HLSLcc/: CMakeLists.txt
HLSLccWrapper/HLSLcc/include/: ShaderInfo.h  UnityInstancingFlexibleArraySize.h  hlslcc.h  hlslcc.hpp
HLSLccWrapper/HLSLcc/src/: ControlFlowGraphUtils.cpp  Declaration.cpp  HLSLCrossCompilerContext.cpp  HLSLccTypes.natvis  Instruction.cpp  LoopTransform.cpp  Operand.cpp  Shader.cpp  ShaderInfo.cpp  UseDefineChains.cpp  toMetal.cpp  toMetalDeclaration.cpp  toMetalInstruction.cpp
HLSLccWrapper/HLSLcc/src/cbstring/: bsafe.c  bstraux.c  bstrlib.c  bstrlib.txt
HLSLccWrapper/HLSLcc/src/internal_includes/: Instruction.h  Operand.h  decode.h  toGLSL.h  toGLSLOperand.h  toMetal.h  tokens.h
HLSLccWrapper/src/: HLSLccWrapper.cpp  HLSLccWrapper.h
HLSLccWrapper/src/HLSLcc/include/: growing_array.h  pstdint.h
HLSLccWrapper/src/HLSLcc/src/: ControlFlowGraph.cpp  DataTypeAnalysis.cpp  HLSLcc.cpp  HLSLccToolkit.cpp  decode.cpp  reflect.cpp  toGLSL.cpp  toGLSLDeclaration.cpp  toGLSLInstruction.cpp  toGLSLOperand.cpp  toMetalOperand.cpp
HLSLccWrapper/src/HLSLcc/src/cbstring/: bsafe.h  bstraux.h  bstrlib.h
HLSLccWrapper/src/HLSLcc/src/internal_includes/: ControlFlowGraph.h  ControlFlowGraphUtils.h  DataTypeAnalysis.h  Declaration.h  HLSLCrossCompilerContext.h  HLSLccToolkit.h  LoopTransform.h  Shader.h  Translator.h  UseDefineChains.h  debug.h  languages.h  reflect.h  toMetalDeclaration.h
Texture2DDecoderNative/: CMakeLists.txt  Texture2DDecoderNative.vcxproj  Texture2DDecoderNative.vcxproj.filters  etc.cpp
Texture2DDecoderNative/crunch/: crn_decomp.h
Texture2DDecoderNative/unitycrunch/: crn_decomp.h
(+11578 files in other folders)
